Added - new endpoints user and room update, update Readme
